fix email settings and testability, add tray icon spacers